--- a/electron-plugin-poc/tsconfig.json
+++ b/electron-plugin-poc/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "target": "ESNext",
-    "module": "commonjs",
+    "module": "ESNext",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
