--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@types/electron-squirrel-startup": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.20",
     "electron": "33.3.1",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.4.11"
