starting to improve dynamic loading of extensions and started custom enum class because TS enum is yuck

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,16 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": true,
-    "baseUrl": ".",
     "outDir": "dist",
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".", // Base directory (typically your project root)
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+      "@models/*": ["src/models/*"],
+      "@_types/*": ["src/types/*"],
+    }
+
   }
 }
