--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-forge/plugin-vite": "^7.6.0",
     "@electron/fuses": "^1.8.0",
     "@types/electron-squirrel-startup": "^1.0.2",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "^5.3.3",
@@ -30,9 +31,12 @@
     "autoprefixer": "^10.4.20",
     "electron": "33.3.1",
     "eslint": "^8.57.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.4.11"
