--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "@utils/*": ["src/utils/*"],
       "@models/*": ["src/models/*"],
       "@_types/*": ["src/types/*"],
+      "@data/*": ["src/data/*"]
     }
 
   }
